# zammadog-cli

./: .env.example  .gitignore  README.md  install.ps1  install.sh  pyproject.toml
.claude/skills/zammadog/: SKILL.md
.claude/skills/zammadog-workspace/evals/: evals.json
.claude/skills/zammadog-workspace/iteration-1/: benchmark.json  review.html
.claude/skills/zammadog-workspace/iteration-1/eval-0-dd-url-incident/: eval_metadata.json
.claude/skills/zammadog-workspace/iteration-1/eval-0-dd-url-incident/with_skill/: grading.json  timing.json
.claude/skills/zammadog-workspace/iteration-1/eval-0-dd-url-incident/without_skill/: grading.json  timing.json
.claude/skills/zammadog-workspace/iteration-1/eval-1-aggregate-errors/: eval_metadata.json
.claude/skills/zammadog-workspace/iteration-1/eval-1-aggregate-errors/with_skill/: grading.json  timing.json
.claude/skills/zammadog-workspace/iteration-1/eval-1-aggregate-errors/without_skill/: grading.json  timing.json
.claude/skills/zammadog-workspace/iteration-1/eval-2-trace-lookup/: eval_metadata.json
.claude/skills/zammadog-workspace/iteration-1/eval-2-trace-lookup/with_skill/: grading.json  timing.json
skills/zammadog/: SKILL.md
src/zammadog/: __init__.py  cli.py  client.py  cloudwatch_client.py  compact.py  evidence.py  links.py  render.py  report.py
src/zammadog/parsers/: __init__.py  example_parser.py
tests/: test_cli.py  test_client.py  test_cloudwatch_client.py  test_compact.py  test_evidence.py  test_links.py  test_render_html.py  test_report.py
(+14 files in other folders)
