[project]
name = "zammadog"
version = "0.1.0"
description = "Token-friendly Datadog Logs/APM CLI for AI agents and humans."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
zammadog = "zammadog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zammadog"]
